Update package.json database

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vin-backend-test",
-  "version": "1.0.0",
+  "name": "vin-backend-supabase",
+  "version": "2.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,10 +11,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.1.6",
+    "pg": "^8.11.3",
     "exceljs": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
