--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "vin-backend-supabase",
   "version": "2.0.0",
+  "description": "Backend VIN Tracker avec Supabase PostgreSQL et UptimeRobot monitoring",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node -e \"console.log('Test OK')\"",
+    "health": "curl -f http://localhost:3000/api/health || exit 1"
   },
   "dependencies": {
     "@google-cloud/vision": "^3.1.2",
@@ -19,5 +22,16 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "keywords": [
+    "vin",
+    "tracker",
+    "supabase", 
+    "postgresql",
+    "ocr",
+    "render",
+    "uptimerobot"
+  ],
+  "author": "VIN Tracker Team",
+  "license": "MIT"
 }
